--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -1,5 +1,7 @@
+/* https://vitepress.dev/guide/extending-default-theme#customizing-css */
+
 :root {
-  --vp-c-brand-1: #ff6f61;
+  --vp-c-brand-1: oklch(0.685 0.169 237.323);
 
   --vp-button-brand-bg: var(--vp-c-brand-1);
 
@@ -7,12 +9,12 @@
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
     var(--vp-c-brand-1) 30%,
-    #ff007f
+    oklch(0.488 0.243 264.376)
   );
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     var(--vp-c-brand-1) 50%,
-    #ff007f 50%
+    oklch(0.488 0.243 264.376) 50%
   );
   --vp-home-hero-image-filter: blur(44px);
 
@@ -32,5 +34,5 @@
 }
 
 .VPHero .VPImage {
-  filter: drop-shadow(-2px 4px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(-2px 4px 6px #00000033);
 }
